--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,16 @@
   position: absolute;
   height: 55vw;
   width: 55vw;
-  max-height: 500px;
   max-width: 500px;
+  max-height: 500px;
+}
+
+.line {
+  background-color: black;
+  width: 50%;
+  height: 2px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform-origin: 0% 0%;
 }
