--- a/styles.css
+++ b/styles.css
@@ -81,3 +81,11 @@
      transform: rotate(360deg);
    }
 }
+
+@keyframes cabins {   0% {
+     transform: rotate(0deg);
+   }
+   100% {
+     transform: rotate(-360deg);
+   }
+}
